nemu/include/cpu/instr/.err
lgdt.h:3:16: error: expected constructor, destructor, or type conversion before '(' token
 make_instr_func(lgdt);
                ^
